--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,19 +67,64 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 * Variables
 ****************************************/
 /****************************************
+* Icons
+****************************************/
+@font-face {
+  font-family: 'Wesual';
+  src: url("/fonts/wesual.eot?-i533wn");
+  src: url("/fonts/wesual.eot?#iefix-i533wn") format("embedded-opentype"), url("/fonts/wesual.woff?-i533wn") format("woff"), url("/fonts/wesual.ttf?-i533wn") format("truetype"), url("/fonts/wesual.svg?-i533wn#wesual") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* line 31, ../../scss/main.scss */
+[class^="icon-"], [class*=" icon-"] {
+  font-family: 'Wesual';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* line 45, ../../scss/main.scss */
+.icon {
+  display: inline-block;
+}
+
+/* line 47, ../../scss/main.scss */
+.icon-star:before {
+  content: "\e600";
+}
+
+/* line 51, ../../scss/main.scss */
+.icon-flash:before {
+  content: "\e601";
+}
+
+/* line 55, ../../scss/main.scss */
+.icon-flag:before {
+  content: "\e602";
+}
+
+/****************************************
 * Util classes
 ****************************************/
-/* line 20, ../../scss/main.scss */
+/* line 63, ../../scss/main.scss */
 .left {
   float: left;
 }
 
-/* line 22, ../../scss/main.scss */
+/* line 65, ../../scss/main.scss */
 .right {
   float: right;
 }
 
-/* line 24, ../../scss/main.scss */
+/* line 67, ../../scss/main.scss */
 .block {
   display: block;
 }
@@ -87,7 +132,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /****************************************
 * Typography
 ****************************************/
-/* line 30, ../../scss/main.scss */
+/* line 73, ../../scss/main.scss */
 html, body, .base-input,
 .base-button {
   font-family: 'Open Sans', sans-serif;
@@ -95,31 +140,31 @@ html, body, .base-input,
   font-weight: 300;
 }
 
-/* line 36, ../../scss/main.scss */
+/* line 79, ../../scss/main.scss */
 h1, h2, h3 {
   font-family: 'Grumpy Black 24', serif;
   line-height: 1.1;
   letter-spacing: -2px;
 }
 
-/* line 46, ../../scss/main.scss */
+/* line 89, ../../scss/main.scss */
 h2 {
   font-size: 92px;
 }
 
-/* line 48, ../../scss/main.scss */
+/* line 91, ../../scss/main.scss */
 strong {
-  font-weight: 700;
+  font-weight: 600;
 }
 
-/* line 50, ../../scss/main.scss */
+/* line 93, ../../scss/main.scss */
 p {
   line-height: 1.5;
   max-width: 570px;
   margin-bottom: 20px;
 }
 
-/* line 56, ../../scss/main.scss */
+/* line 99, ../../scss/main.scss */
 a {
   -webkit-transition: color 150ms ease;
   -moz-transition: color 150ms ease;
@@ -131,22 +176,22 @@ a {
 /****************************************
 * Framework
 ****************************************/
-/* line 64, ../../scss/main.scss */
+/* line 107, ../../scss/main.scss */
 ::selection {
   background: #7118b2;
 }
 
-/* line 65, ../../scss/main.scss */
+/* line 108, ../../scss/main.scss */
 ::-moz-selection {
   background: #7118b2;
 }
 
-/* line 67, ../../scss/main.scss */
+/* line 110, ../../scss/main.scss */
 * {
   box-sizing: border-box;
 }
 
-/* line 72, ../../scss/main.scss */
+/* line 115, ../../scss/main.scss */
 input:focus,
 select:focus,
 textarea:focus,
@@ -154,7 +199,7 @@ button:focus {
   outline: none;
 }
 
-/* line 75, ../../scss/main.scss */
+/* line 118, ../../scss/main.scss */
 .base-input,
 .base-button {
   -webkit-appearance: none;
@@ -163,7 +208,7 @@ button:focus {
   border: none;
 }
 
-/* line 81, ../../scss/main.scss */
+/* line 124, ../../scss/main.scss */
 .base-button {
   cursor: pointer;
   background: #511180;
@@ -174,7 +219,7 @@ button:focus {
   color: #fff;
 }
 
-/* line 91, ../../scss/main.scss */
+/* line 134, ../../scss/main.scss */
 .signup-input {
   padding: 17px;
   width: 360px;
@@ -182,60 +227,60 @@ button:focus {
   font-size: 20px;
 }
 
-/* line 98, ../../scss/main.scss */
+/* line 141, ../../scss/main.scss */
 .row {
   overflow: hidden;
   *zoom: 1;
   width: 100%;
 }
 
-/* line 103, ../../scss/main.scss */
+/* line 146, ../../scss/main.scss */
 .purple {
   color: #7118b2;
 }
 
-/* line 105, ../../scss/main.scss */
+/* line 148, ../../scss/main.scss */
 .grey-background {
   background: #edf1f2;
   color: #000;
 }
 
-/* line 110, ../../scss/main.scss */
+/* line 153, ../../scss/main.scss */
 .purple-background {
   background: #7118b2;
   color: #fff;
 }
-/* line 114, ../../scss/main.scss */
+/* line 157, ../../scss/main.scss */
 .purple-background a {
   color: #fff;
 }
-/* line 115, ../../scss/main.scss */
+/* line 158, ../../scss/main.scss */
 .purple-background a:hover {
   color: #000;
 }
 
-/* line 118, ../../scss/main.scss */
+/* line 161, ../../scss/main.scss */
 .container {
   max-width: 980px;
   margin: 0 auto;
 }
 
-/* line 123, ../../scss/main.scss */
+/* line 166, ../../scss/main.scss */
 .header-padding {
   padding: 28px;
 }
 
-/* line 127, ../../scss/main.scss */
+/* line 170, ../../scss/main.scss */
 .hero-padding {
   padding: 135px 28px;
 }
 
-/* line 131, ../../scss/main.scss */
+/* line 174, ../../scss/main.scss */
 .base-section-padding {
-  padding: 80px;
+  padding: 110px 0 135px;
 }
 
-/* line 133, ../../scss/main.scss */
+/* line 176, ../../scss/main.scss */
 .logo {
   text-indent: -9999px;
   background-image: url("/img/wesual.png");
@@ -248,22 +293,22 @@ button:focus {
 /****************************************
 * Index 
 ****************************************/
-/* line 146, ../../scss/main.scss */
+/* line 189, ../../scss/main.scss */
 .menu-header {
   overflow: visible;
 }
 
-/* line 151, ../../scss/main.scss */
+/* line 194, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin-left: 15px;
 }
-/* line 155, ../../scss/main.scss */
+/* line 198, ../../scss/main.scss */
 .menu li a {
   position: relative;
   color: #7118b2;
 }
-/* line 160, ../../scss/main.scss */
+/* line 203, ../../scss/main.scss */
 .menu li a:after {
   -webkit-transition: all 200ms ease;
   -moz-transition: all 200ms ease;
@@ -284,11 +329,11 @@ button:focus {
   background: #7118b2;
   content: '';
 }
-/* line 173, ../../scss/main.scss */
+/* line 216, ../../scss/main.scss */
 .menu li a:hover {
   color: #7118b2;
 }
-/* line 176, ../../scss/main.scss */
+/* line 219, ../../scss/main.scss */
 .menu li a:hover:after {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25);
   opacity: 0.25;
@@ -299,17 +344,17 @@ button:focus {
   transform: translate3d(0, 2px, 0);
 }
 
-/* line 184, ../../scss/main.scss */
+/* line 227, ../../scss/main.scss */
 .relative {
   position: relative;
 }
 
-/* line 188, ../../scss/main.scss */
+/* line 231, ../../scss/main.scss */
 .hero-container {
   width: 650px;
 }
 
-/* line 192, ../../scss/main.scss */
+/* line 235, ../../scss/main.scss */
 .hero-tv {
   position: absolute;
   left: 690px;
@@ -317,24 +362,34 @@ button:focus {
   width: 676px;
 }
 
-/* line 199, ../../scss/main.scss */
+/* line 242, ../../scss/main.scss */
 .features {
   text-align: center;
 }
 
-/* line 203, ../../scss/main.scss */
+/* line 246, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
-  width: 33%;
-  margin-top: 40px;
+  width: 32.5%;
+  margin-top: 70px;
 }
-/* line 209, ../../scss/main.scss */
+/* line 252, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
+/* line 254, ../../scss/main.scss */
+.feature i {
+  font-size: 90px;
+  margin-bottom: 65px;
+}
+/* line 259, ../../scss/main.scss */
+.feature p {
+  margin: 0 auto;
+  max-width: 275px;
+}
 
-/* line 212, ../../scss/main.scss */
+/* line 265, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -349,7 +404,7 @@ button:focus {
 /****************************************
 * Misc.
 ****************************************/
-/* line 223, ../../scss/main.scss */
+/* line 276, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
